src/styles/main.scss
@charset "utf-8";

.v-content {
  width: 100%;
  padding-top: 10px;
}

.hero-image {
  max-height: 350px;
  min-height: 100px;
  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
              0px 2px 2px 0px rgba(0, 0, 0, 0.14),
              0px 1px 5px 0px rgba(0, 0, 0, 0.12);
}

.fe-practices-loader {
  margin-right: 50%;
  margin-left: 50%;
  line-height: 50vh;
  color: #EE0200;
}

.fe-section-divider {
  border-color: #666;
  border-width: 1px;
  border-radius: .5px;
}

.fe-card-stat-container {
  text-align: center;
  float: left;
  padding: 0.313rem;
  border-radius: 0.25rem;
  border: 0.063rem solid #ccc;
  font-size: .75rem;
  margin-left: 0.125rem;
}

.fe-card-stat-icon {
  color: rgba(0, 0, 0, 1) !important;
  margin-top: -0.188rem;
}

@media (max-width:1300px) { 
  .fe-workshop-wrap {
    height: calc(100vh - 21.875rem)
  }

  .hero-image {
    max-height: 18.75rem;
  }
}

@media (max-width:1000px) { 
  .fe-workshop-wrap {
    height: calc(100vh - 300px)
  }

  .hero-image {
    max-height: 15.625rem;
  }
}

@media (max-width:700px) { 
  .fe-workshop-wrap {
    height: calc(100vh - 15.625rem)
  }

  .hero-image {
    max-height: 12.5rem;
  }
}

@media (max-width:500px) { 
  .fe-workshop-wrap {
    height: calc(100vh - 14.063rem)
  }

  .hero-image {
    max-height: 10.938rem;
  }
}

